deploy/k8s/service.yaml
#golang-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuario-test-front
spec:
  selector:
    app: usuario-test-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
